19508 FIX Fix icons contrast in dark theme
Some icons such as the one to reset a search or "Show more" were
shown too dark in the dark theme, because their light theme
variant was used instead. This problem is now fixed.

CMK-32726

--- a/packages/cmk-frontend/src/themes/facelift/scss/_dashboard.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_dashboard.scss
@@ -280,15 +280,15 @@ div.dashlet.edit {
       }
 
       &.edit {
-        background-image: url('../facelift/images/dashlet_edit.svg');
+        background-image: url('images/dashlet_edit.svg');
       }
 
       &.clone {
-        background-image: url('../facelift/images/dashlet_clone.svg');
+        background-image: url('images/dashlet_clone.svg');
       }
 
       &.del {
-        background-image: url('../facelift/images/dashlet_delete.svg');
+        background-image: url('images/dashlet_delete.svg');
       }
     }
   }
