--- a/packages/cmk-frontend/src/themes/facelift/scss/_main_menu.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_main_menu.scss
@@ -52,7 +52,7 @@
 
       &.clearable {
         cursor: pointer;
-        background-image: url('../facelift/images/icon_close.svg');
+        background-image: url('images/icon_close.svg');
         background-size: 12px;
       }
     }
