--- a/packages/cmk-frontend/src/themes/facelift/scss/_more.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_more.scss
@@ -61,7 +61,7 @@ a.more {
     display: flex;
 
     &:after {
-      content: url('../facelift/images/icon_show_more.svg');
+      content: url('images/icon_show_more.svg');
     }
   }
 
@@ -74,7 +74,7 @@ a.more {
       display: flex;
 
       &:after {
-        content: url('../facelift/images/icon_show_less.svg');
+        content: url('images/icon_show_less.svg');
       }
     }
   }
