--- a/packages/cmk-frontend/src/themes/facelift/scss/_node_visualization.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_node_visualization.scss
@@ -80,7 +80,7 @@ div.topology_layout_designer,
 a#menu_shortcut_edit_layout,
 div.topology_compare_history {
   img {
-    content: url('../facelift/images/icon_toggle_off.svg') !important;
+    content: url('images/icon_toggle_off.svg') !important;
 
     &.on {
       content: url('../facelift/images/icon_toggle_on.svg') !important;
@@ -114,7 +114,7 @@ div.nodevis.toggle_switch_container {
   background-repeat: no-repeat;
   pointer-events: all;
 
-  background-image: url('../facelift/images/icon_toggle_off.svg');
+  background-image: url('images/icon_toggle_off.svg');
 
   &.on {
     background-image: url('../facelift/images/icon_toggle_on.svg');
@@ -185,7 +185,7 @@ div.node_vis {
   }
 
   img.tick {
-    content: url('../facelift/images/icon_tick.svg') !important;
+    content: url('images/icon_tick.svg') !important;
   }
 
   g#svg_layers .node_element circle.mesh_root {
