--- a/packages/cmk-frontend/src/themes/facelift/scss/_page_menu.scss
+++ b/packages/cmk-frontend/src/themes/facelift/scss/_page_menu.scss
@@ -467,7 +467,7 @@ div#top_heading {
       input#inpage_search_form_reset {
         width: 8px;
         height: 8px;
-        background-image: url('../facelift/images/icon_close.svg');
+        background-image: url('images/icon_close.svg');
         background-size: 8px 8px;
         border-radius: 0;
       }
